welcome.lessons.welcome.array.island.Island.scala.error
island:7: error: not found: value then
		if (i != 0) then {
                            ^